# raspi-ai-camera

./: README.md  index.html
operate-camera/: index.html
rasp-camera/: README.md  config.ini  main.py  pyproject.toml
