[project]
name = "rasp-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.2",
    "google-auth-oauthlib>=1.2.2",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
